{
  "version": 4,
  "terraform_version": "1.4.5",
  "serial": 81,
  "lineage": "c0f77491-a9ba-efa5-d260-040103543546",
  "resources": [
    {
      "mode": "data",
      "type": "azurerm_public_ip",
      "name": "tf-ip-data",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/e02ac391-ce62-4bec-a5d9-2feff2dc17d7/resourceGroups/nadi-tf/providers/Microsoft.Network/publicIPAddresses/public-ip-tf",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "public-ip-tf",
            "resource_group_name": "nadi-tf",
            "sku": "Basic",
            "tags": {
              "department": "DevOps",
              "environment": "dev",
              "source": "terraform"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/e02ac391-ce62-4bec-a5d9-2feff2dc17d7/resourceGroups/nadi-tf/providers/Microsoft.Network/networkInterfaces/nic-tf",
            "internal_domain_name_suffix": "amzl0okmu5iu1ct1pq3uptk44g.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/e02ac391-ce62-4bec-a5d9-2feff2dc17d7/resourceGroups/nadi-tf/providers/Microsoft.Network/publicIPAddresses/public-ip-tf",
                "subnet_id": "/subscriptions/e02ac391-ce62-4bec-a5d9-2feff2dc17d7/resourceGroups/nadi-tf/providers/Microsoft.Network/virtualNetworks/vnet-tf/subnets/subnet_tf"
              }
            ],
            "location": "westeurope",
            "name": "nic-tf",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "nadi-tf",
            "tags": {
              "department": "DevOps",
              "environment": "dev",
              "source": "terraform"
            }
          },
          "dependencies": [
            "azurerm_public_ip.publicip_tf",
            "azurerm_resource_group.nadi_tf",
            "azurerm_subnet.subnet_tf",
            "azurerm_virtual_network.vnet_tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e02ac391-ce62-4bec-a5d9-2feff2dc17d7/resourceGroups/nadi-tf/providers/Microsoft.Network/networkSecurityGroups/nsg-tf",
            "location": "westeurope",
            "name": "nsg-tf",
            "resource_group_name": "nadi-tf",
            "security_rule": [],
            "tags": {
              "department": "DevOps",
              "environment": "dev",
              "source": "terraform"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.nadi_tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "nsg_rule_allowall_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/e02ac391-ce62-4bec-a5d9-2feff2dc17d7/resourceGroups/nadi-tf/providers/Microsoft.Network/networkSecurityGroups/nsg-tf/securityRules/nsg-rule-tf",
            "name": "nsg-rule-tf",
            "network_security_group_name": "nsg-tf",
            "priority": 101,
            "protocol": "*",
            "resource_group_name": "nadi-tf",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg_tf",
            "azurerm_resource_group.nadi_tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "publicip_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/e02ac391-ce62-4bec-a5d9-2feff2dc17d7/resourceGroups/nadi-tf/providers/Microsoft.Network/publicIPAddresses/public-ip-tf",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "public-ip-tf",
            "resource_group_name": "nadi-tf",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "department": "DevOps",
              "environment": "dev",
              "source": "terraform"
            }
          },
          "dependencies": [
            "azurerm_resource_group.nadi_tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/e02ac391-ce62-4bec-a5d9-2feff2dc17d7/resourceGroups/nadi-tf/providers/Microsoft.Network/virtualNetworks/vnet-tf/subnets/subnet_tf",
            "name": "subnet_tf",
            "resource_group_name": "nadi-tf",
            "virtual_network_name": "vnet-tf"
          },
          "dependencies": [
            "azurerm_resource_group.nadi_tf",
            "azurerm_virtual_network.vnet_tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nadi_nsga_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e02ac391-ce62-4bec-a5d9-2feff2dc17d7/resourceGroups/nadi-tf/providers/Microsoft.Network/virtualNetworks/vnet-tf/subnets/subnet_tf",
            "network_security_group_id": "/subscriptions/e02ac391-ce62-4bec-a5d9-2feff2dc17d7/resourceGroups/nadi-tf/providers/Microsoft.Network/networkSecurityGroups/nsg-tf",
            "subnet_id": "/subscriptions/e02ac391-ce62-4bec-a5d9-2feff2dc17d7/resourceGroups/nadi-tf/providers/Microsoft.Network/virtualNetworks/vnet-tf/subnets/subnet_tf"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg_tf",
            "azurerm_resource_group.nadi_tf",
            "azurerm_subnet.subnet_tf",
            "azurerm_virtual_network.vnet_tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "39bd3203-a74c-4dd1-8a7b-7c3b47cd5ef6",
            "id": "/subscriptions/e02ac391-ce62-4bec-a5d9-2feff2dc17d7/resourceGroups/nadi-tf/providers/Microsoft.Network/virtualNetworks/vnet-tf",
            "location": "westeurope",
            "name": "vnet-tf",
            "resource_group_name": "nadi-tf",
            "tags": {
              "department": "DevOps",
              "environment": "dev",
              "source": "terraform"
            }
          },
          "dependencies": [
            "azurerm_resource_group.nadi_tf"
          ]
        }
      ]
    }
  ]
}